# kmousetool

./: .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  configure.in.in  kmousetool.lsm  snapcraft.yaml
doc/: CMakeLists.txt  Makefile.am  index.docbook  man-kmousetool.1.docbook
kmousetool/: CMakeLists.txt  Makefile.am  Messages.sh  Xmd_kmousetool.h  getcommand.cpp  kaboutmousetool.cpp  kaboutmousetool.h  kmousetool.cpp  kmousetool.desktop  kmousetool.h  kmousetoolui.ui  main.cpp  mtstroke.cpp  mtstroke.h  org.kde.kmousetool.appdata.xml  org.kde.kmousetool.desktop  version.h  xgetcommand.cpp
kmousetool/pics/: CMakeLists.txt  Makefile.am
po/ar/: kmousetool.po
po/ast/: kmousetool.po
po/be/: kmousetool.po
po/bg/: kmousetool.po
po/br/: kmousetool.po
po/bs/: kmousetool.po
po/ca/: kmousetool.po
po/ca/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/ca@valencia/: kmousetool.po
po/cs/: kmousetool.po
po/cy/: kmousetool.po
po/da/: kmousetool.po
po/de/: kmousetool.po
po/de/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/el/: kmousetool.po
po/en_GB/: kmousetool.po
po/eo/: kmousetool.po
po/es/: kmousetool.po
po/es/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/et/: kmousetool.po
po/et/docs/kmousetool/: man-kmousetool.1.docbook
po/eu/: kmousetool.po
po/fa/: kmousetool.po
po/fi/: kmousetool.po
po/fr/: kmousetool.po
po/fr/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/ga/: kmousetool.po
po/gl/: kmousetool.po
po/he/: kmousetool.po
po/hi/: kmousetool.po
po/hne/: kmousetool.po
po/hr/: kmousetool.po
po/hu/: kmousetool.po
po/ia/: kmousetool.po
po/is/: kmousetool.po
po/it/: kmousetool.po
po/it/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/ja/: kmousetool.po
po/ka/: kmousetool.po
po/kk/: kmousetool.po
po/km/: kmousetool.po
po/ko/: kmousetool.po
po/ku/: kmousetool.po
po/lt/: kmousetool.po
po/lv/: kmousetool.po
po/mk/: kmousetool.po
po/ml/: kmousetool.po
po/mr/: kmousetool.po
po/ms/: kmousetool.po
po/nb/: kmousetool.po
po/nds/: kmousetool.po
po/ne/: kmousetool.po
po/nl/: kmousetool.po
po/nl/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/nn/: kmousetool.po
po/oc/: kmousetool.po
po/pa/: kmousetool.po
po/pl/: kmousetool.po
po/pt/: kmousetool.po
po/pt/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/pt_BR/: kmousetool.po
po/pt_BR/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/ro/: kmousetool.po
po/ru/: kmousetool.po
po/ru/docs/kmousetool/: index.docbook
po/sa/: kmousetool.po
po/se/: kmousetool.po
po/sk/: kmousetool.po
po/sl/: kmousetool.po
po/sl/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/sq/: kmousetool.po
po/sr/: kmousetool.po
po/sr@ijekavian/: kmousetool.po
po/sr@ijekavianlatin/: kmousetool.po
po/sr@latin/: kmousetool.po
po/sv/: kmousetool.po
po/sv/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/ta/: kmousetool.po
po/tg/: kmousetool.po
po/th/: kmousetool.po
po/tr/: kmousetool.po
po/ug/: kmousetool.po
po/uk/: kmousetool.po
po/uk/docs/kmousetool/: index.docbook  man-kmousetool.1.docbook
po/vi/: kmousetool.po
po/zh_CN/: kmousetool.po
po/zh_TW/: kmousetool.po
