####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.docbook 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/kmousetool/
	$(INSTALL_DATA) $(srcdir)/index.docbook $(kde_htmldir)/kmousetool/index.docbook

uninstall-local:
	-rm -f $(kde_htmldir)/kmousetool/index.docbook

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = kmousetool


